# flash-semicrf

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  BISECTION_MASTER_PLAN.md  BISECTION_STEP2_ADAPTIVE_TILE_C.md  BISECTION_STEP3_MAMBA_CLAMPING.md  BISECTION_STEP4_MARGINAL_CLAMPING.md  LICENSE  LICENSE.md  README.md  centering_modes_future_directions.md  pyproject.toml  requirements.txt  sentinel-v2-design.md  setup.py
.github/workflows/: ci.yml
.sentinel/: .sentinel-meta.yaml  README.md  adapters.py  commands.py  constants.py  core.py  fix.py  models.py  output.py  sentinel.py  sentinel.yaml  spec.md  status.json  verify-assumptions.py  watch.py
.sentinel/adapters/: claude.md  claude.skill.md  codex.instructions.md  codex.md
.sentinel/anchors/: anchors.yaml  assumptions.yaml  verify-all.py
.sentinel/hooks/: pre-commit-anchors.sh  pre-commit-tests.sh
.sentinel/traces/: autograd-kernel-interface.md  pytorch-forward-k3plus.md  triton-backward-k3plus.md  triton-forward-k3plus.md
Realistic_Contexts_Validation/: make_benchmark_configs_from_summary.py  run_make_benchmark_configs.sh  run_plot_figures_loop.sh  run_plot_figures_loop_VectorStremingOnly.sh  run_realistic_benchmarks_loop.sh  run_realistic_benchmarks_loop_VectorStreamingOnly.sh
benchmarks/: benchmark_backends.py  benchmark_banded.py  benchmark_batch_sweep.py  benchmark_grid.py  benchmark_k_sweep.py  benchmark_memory_analysis.py  benchmark_semimarkov_grid.py  benchmark_streaming_backward.py  benchmark_streaming_scale.py  benchmark_t_sweep.py  plot_banded_fillin.py  plot_k_sweep.py
benchmarks/lib/: __init__.py  compile_utils.py  memory.py  output.py  runner.py  sampling.py
benchmarks/practical_demonstration/: README.md  calibration.py  calibration_integration.py  requirements.txt  run_benchmarks.py  smoke_test.py
docs/: BACKWARD_DEBUG_PRINTS.md  DEBUGGING_NAN.md  api.md  backends.md  benchmarks.md  disclosure.md  linear_crf_equivalence.md  semirings.md  streaming_edge_api_roadmap.md  streaming_internals.md  triton_backward_roadmap.md  triton_lessons_learned.md  uncertainty_and_focused_learning.md  workflow_integration.md
docs/.triton_docs/: README.md
docs/debug/: DEBUGGING_NAN.md
docs/debugging/: DEBUGGING_BACKWARD_NONDETERMINISM.md  DEBUGGING_SEGMENT_ISOLATION.md  FORWARD_DEBUG_PRINTS.md
docs/faq/: 01-basics.md  02-using-the-library.md  03-jargon-decoder.md  04-engineering-decisions.md  05-troubleshooting.md  README.md  (+1 more)
examples/: lightning_integration.py
scripts/: ablate_zero_centering.py  ablation_to_latex.py  benchmark_triton_vs_streaming.py  correctness_to_latex.py  debug_backward_nondeterminism.py  debug_marginal_divergence.py  diagnose_tiling.py  find_determinism.py  linear_crf_equivalence.py  parse_debug_output.sh  test_batch1_isolated.py  trace_marginals.py  validate_correctness.py  verify_atomic_optimization.py  verify_determinism_publication.py
tests/: __init__.py  conftest.py  test_backend_equivalence.py  test_banded_matrix.py  test_banded_utils.py  test_blocktriangular.py  test_boundary_precision.py  test_checkpoint_semiring.py  test_cpu_only.py  test_decode_optimization.py  test_edge_cases.py  test_edge_cases_extended.py  test_encoder_integration.py  test_error_handling.py  test_focused_learning.py  test_helpers_cpu.py  test_hsmm.py  test_nn.py  test_numerical_gradients.py  test_numerical_stability_clinical.py  test_partition_equivalence.py  test_semimarkov_banded.py  test_semimarkov_utils.py  test_semirings.py  test_sentinel_contracts.py  test_streaming.py  test_streaming_k_boundaries.py  test_streaming_scale.py  test_streaming_triton.py  test_triton_backward.py  test_triton_cache_isolation.py  test_triton_marginals.py  test_triton_scan.py  test_uncertainty_quantification.py  test_validation.py
(+101 files in other folders)
