[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-semicrf"
version = "0.2.0"
description = "Efficient Semi-Markov CRF Inference for PyTorch"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Benjamin K. Johnson", email = "ben.johnson@vai.org"}
]
keywords = [
    "pytorch",
    "semi-markov",
    "crf",
    "conditional-random-field",
    "sequence-labeling",
    "genomics",
    "deep-learning",
    "structured-prediction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark",
    "pytest-cov",
    "black",
    "ruff",
    "flake8",
    "mypy",
]
benchmarks = [
    "numpy",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "pyfaidx>=0.7.0",      # Gencode: FASTA parsing
    "librosa>=0.10.0",     # TIMIT: audio features
    "soundfile>=0.12.0",   # TIMIT: WAV files
    "pytorch-crf>=0.7.2",  # Linear CRF baseline
]
# NOTE: mamba-ssm requires CUDA. Install separately: pip install mamba-ssm
cuda = []  # CUDA extension is optional, built separately

[project.urls]
Homepage = "https://github.com/biobenkj/flash-semicrf"
Documentation = "https://github.com/biobenkj/flash-semicrf#readme"
Repository = "https://github.com/biobenkj/flash-semicrf"
Issues = "https://github.com/biobenkj/flash-semicrf/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"flash_semicrf._genbmm.csrc" = ["*.cpp", "*.cu"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "UP007",  # use X | Y for Union (Optional still readable)
    "UP045",  # use X | None for Optional (Optional still readable)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow and not gpu_isolated'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu_isolated: marks tests requiring isolated GPU execution (run with '-m gpu_isolated')",
    "diagnostic: non-gating diagnostic tests intended for local debugging",
    "informational: non-gating profiling/informational tests",
]

[tool.coverage.run]
omit = [
    "src/flash_semicrf/_genbmm/*",
    "src/flash_semicrf/streaming/triton_forward.py",
    "src/flash_semicrf/streaming/triton_backward.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if HAS_TRITON:",
    "if torch.cuda.is_available():",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
